--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,8 @@
 <resources>
-    <string name="app_name">Around Me</string>
+    <string name="app_name">test1</string>
 
-    <string name="latitude_label">Latitude</string>
-    <string name="longitude_label">Longitude</string>
-    <string name="last_update_time_label">Last location update time</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="start_updates">Start updates</string>
-    <string name="stop_updates">Stop updates</string>
-    <string name="location_updated_message">Location updated</string>
+    <string name="action_settings">Settings</string>
 </resources>
